--- a/css/rangbharathi.css
+++ b/css/rangbharathi.css
@@ -382,6 +382,9 @@ h1 {
         }
     }
 @media (max-width: 400px) {
+    body {
+        background-size: auto;
+        }
     .main-header {
         flex-direction: column;
         align-items: center;
